tests/miniJava/pos/000775_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( new java ( ) ) while ( 0 ) { } else System.out.println ( { } ) ; } }
