tests/miniJava/neg/006467_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while while 0 ) { } } }
